--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,11 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+body {
+    min-height: 100vh !important;
+    background-color: lightgray !important;
+}
+
 .beer-form {
 
     width: 90%;
