added country flags

--- a/resources/sass/frontend.scss
+++ b/resources/sass/frontend.scss
@@ -24,6 +24,12 @@
                 font-style: italic;
                 font-size: small;
             }
+
+            &__flag {
+                img {
+                    width: 20px;
+                }
+            }
         }
     }
 }
