beer form with entity instead of eloquent model

--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -22,7 +22,7 @@
 
             img {
                 width: 150px;
-                margin: 0 auto;
+                margin: 0 33px;
             }
 
             &__data {
