--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -94,3 +94,18 @@
         }
     }
 }
+
+.brewer_autocomplete_list {
+    box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
+    max-width: 500px;
+    position: absolute;
+    z-index: 1;
+    background-color: white;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+
+    &__item:hover {
+        cursor: pointer;
+        background-color: lightgrey;
+    }
+}
