--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -2,6 +2,25 @@
 
     width: 90%;
     margin: 0 auto;
+    display: table;
+
+    &__field-block {
+        display: table;
+        width: 100%;
+        margin-bottom: 1em;
+
+        &__label {
+            display: table-cell;
+            width: 15%;
+            text-align: right;
+            padding-right: 1em;
+        }
+
+        &__input {
+            display: table-cell;
+            width: 85%;
+        }
+    }
 
     &__labels {
 
@@ -81,7 +100,8 @@
             margin-right: 1em;
         }
         input {
-            width: 50%
+            width: 50%;
+            margin-top: 0.5em;
         }
     }
 
@@ -95,14 +115,17 @@
     }
 }
 
-.brewer_autocomplete_list {
+.autocomplete_list {
     box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
     max-width: 500px;
     position: absolute;
     z-index: 1;
     background-color: white;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
+
+    &__item {
+        padding-left: 0.5em;
+        padding-right: 0.5em;
+    }
 
     &__item:hover {
         cursor: pointer;
