--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -11,7 +11,7 @@
 
         &__label {
             display: table-cell;
-            width: 15%;
+            min-width: 15%;
             text-align: right;
             padding-right: 1em;
         }
