--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -8,17 +8,27 @@
         display: table;
         width: 100%;
         margin-bottom: 1em;
+        @media screen and (max-width: $small_screen) {
+            display: block;
+        }
 
         &__label {
             display: table-cell;
             min-width: 15%;
             text-align: right;
             padding-right: 1em;
+            @media screen and (max-width: $small_screen) {
+                width: 100%;
+            }
         }
 
         &__input {
             display: table-cell;
             width: 85%;
+            @media screen and (max-width: $small_screen) {
+                width: 100%;
+                display: block;
+            }
         }
     }
 
@@ -79,7 +89,7 @@
     }
 
     input {
-        width: 50%;
+        width: 100%;
     }
 }
 
