--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -145,11 +145,20 @@
     }
 }
 
-.brewer-form {
+.autocomplete-brewer-form {
     margin-bottom: 2em;
     max-width: 500px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.brewer-form {
+    margin-bottom: 2em;
+    padding-left: 2em;
+    padding-right: 2em;
+    input {
+        width: 100%;
+    }
 }
 
 .preview-file-input {
