make beer result card clicable

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10887,7 +10887,15 @@ a.text-dark:focus {
   display: flex;
   margin-bottom: 0.5em;
   border: 1px lightgray solid;
-  box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  color: black;
+}
+
+.beer-list__beer:hover {
+  color: black;
+  text-decoration: none;
+  box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.5);
 }
 
 .beer-list__beer__image {
@@ -10907,6 +10915,8 @@ a.text-dark:focus {
 
 .beer-list__beer__data__name {
   width: 100%;
+  font-size: large;
+  text-overflow: ellipsis;
 }
 
 .beer-list__beer__data__brewer {
