centered spinner & removed redundant no results message

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11123,6 +11123,12 @@ body {
   max-heigth: 250px;
 }
 
+.loading {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .label-badge {
   margin-left: 0.5em;
   margin-right: 0.5em;
