--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -32,6 +32,12 @@ body {
     }
 }
 
+.loading {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+}
+
 .label-badge {
     margin-left: 0.5em;
     margin-right: 0.5em;
